--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "is-url": "^1.2.4",
     "node-fetch": "^2.6.0"
   },
   "engines": {
